# simpleton

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  FRONTEND_SETUP.md  IDEAS.md  LICENSE  Makefile  PHASE2_COMPLETE.md  PHASE2_STATUS.md  QUICKSTART.md  README.md  docker-compose.yml  example_client.py  mise.toml  pyproject.toml  start.sh
.github/workflows/: backend-ci.yml  backend.yml  ci.yml  docker.yml  frontend-ci.yml  frontend.yml  security.yml
app/: __init__.py  auth.py  config.py  main.py  models.py
app/routers/: __init__.py  analytics.py  audio.py  completion.py  embeddings.py  inference.py  rag.py  vision.py
app/utils/: __init__.py  cache.py  document_parser.py  monitoring.py  notifications.py  qdrant_client.py  text_chunker.py
frontend/: .env.example  .eslintignore  .eslintrc.cjs  .prettierignore  BUN_BUNDLER.md  Dockerfile  README.md  bunfig.toml  dev.sh  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  env.d.ts
frontend/src/lib/api/: client.ts  types.ts
frontend/src/lib/components/: ChatInput.svelte  ChatMessage.svelte  ChatSidebar.svelte  ChatWindow.svelte
frontend/src/lib/stores/: chats.ts
frontend/src/routes/: +page.svelte
tests/: __init__.py  test_main.py
