[project]
name = "simpleton"
version = "0.1.0"
description = "Personal LLM inference and embedding service with custom authentication"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["llm", "ollama", "api", "inference", "embeddings", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    # RAG and document processing
    "qdrant-client>=1.7.0",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "markdown>=3.5.0",
    # Caching and monitoring
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
    "pillow>=10.0.0",  # For vision/image processing
    # Audio processing
    "faster-whisper>=0.10.0",  # For audio transcription
    "ffmpeg-python>=0.2.0",  # For audio format conversion
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
simpleton = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Ignore line length (handled by formatter)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
