[project]
name = "simpleton"
version = "0.1.0"
description = "LLM service"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Eric Halvorsen", email = "viscousness@gmail.com" }
]
keywords = ["llm", "ollama", "api", "inference", "embeddings", "fastapi"]

dependencies = [
    "fastapi>=0.109.0",
    "faster-whisper>=0.10.0",  # For audio transcription
    "ffmpeg-python>=0.2.0",  # For audio format conversion
    "httpx>=0.26.0",
    "markdown>=3.5.0",
    "pillow>=10.0.0",  # For vision/image processing
    "prometheus-client>=0.19.0",
    "pydantic-settings>=2.1.0",
    "pydantic>=2.5.3",
    "pypdf>=3.17.0",
    "python-docx>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "safety>=3.0.0",
]

[project.scripts]
simpleton = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]  # Ignore line length (handled by formatter)

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
